# MyCoolEngine

./: .gitignore  CMakeLists.txt
Core/: AdditionalData.h  CMakeLists.txt  Component.cpp  Component.h  ComponentBase.cpp  ComponentBase.h  Entity.h  EntityManager.cpp  EntityManager.h  MainLoop.cpp  MainLoop.h  Manager.h  SystemBase.h
Core/components/: SfmlSprite.cpp  SfmlSprite.h  SfmlTexture.cpp  SfmlTexture.h
Core/systems/: RenderSystem.cpp  RenderSystem.h
ECSFramework/: CMakeLists.txt  Manager.cpp  Manager.h
StandardElements/: CMakeLists.txt
StandardElements/Components/: Collidable.cpp  Collidable.h  Coordinates2D.cpp  Coordinates2D.h  Coordinates2D.hpp  CoordinatesChange.cpp  CoordinatesChange.h  KeyboardMove.h  SfmlSprite.h  SolidBody.cpp  SolidBody.h  Transform.cpp  Transform.h  Velocity.cpp  Velocity.h  Velocity2D.h
StandardElements/Systems/: CoordinatesChangeSystem.cpp  CoordinatesChangeSystem.h  KeyboardMoveSystem.cpp  KeyboardMoveSystem.h  MovementSystem.cpp  MovementSystem.h  SfmlSpritePositionSystem.cpp  SfmlSpritePositionSystem.h  SolidBodyCollisionSystem.cpp  SolidBodyCollisionSystem.h  TransformSystem.cpp  TransformSystem.h  VelocityCollisionSystem.cpp  VelocityCollisionSystem.h  VelocityTransformSystem.cpp  VelocityTransformSystem.h
example/: CMakeLists.txt  SinMoveSystem.cpp  SinMoveSystem.h  main.cpp
src/: CMakeLists.txt
src/Components/: Coordinates.cpp  Coordinates.h  Velocity.cpp  Velocity.h
